chapter5/kubia-multiport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-multiport
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app: kubia
