chapter5/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123 # 지정하지 않으면 클러스터에서 자동으로 지정
  selector:
    app: kubia
