chapter5/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
