chapter5/pod-with-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-with-service
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: http-alt
  selector:
    app: web
