chapter5/kubia-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
    - host: foo.example.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: foo
                port: 
                  number: 80
    - host: bar.example.com
      http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: bar
                port: 
                  number: 80
